<resources>
    <string name="app_name">ICSourcery Magic Commands</string>
    <string name="user_interface">Magic Tweaks</string>
    <string name="general_ui">Magical Commands</string>
    <string name="lockscreen_options">Lockscreen options</string>
    <string name="power_menu_optons">Power menu options</string>
    <string name="functionality">LED Now under Display Settings</string>
    <string name="led_options">LED Options</string>
    <string name="statusbar">Statusbar Tweaks</string>
    <string name="general">Magical UI</string>
    <string name="toggles_layout">Toggles Options</string>
    <string name="clock">Clock Adjustments</string>
    <string name="battery">Battery Related Changes</string>
    <string name="nav_bar">Navigation bar</string>
    <string name="tools">Tools</string>
    <string name="signal">Signal Styles and Colors</string>
    <string name="header_summary_battery">Battery Bar, Mods, Style</string>
    <string name="header_summary_general_ui">Boot animation and audio, bug mailer, rotation, Recents Switcher, etc</string>
    <string name="header_summary_navigation_bar">Buttons to display, nav bar color, order</string>
    <string name="header_summary_lockscreens">Custom apps to launch, layout</string>
    <string name="header_summary_power_menu">What to display in your power menu</string>
    <string name="header_summary_led">Now located under Settings Display.</string>
    <string name="header_summary_general">Settings button behavior</string>
    <string name="header_summary_toggles">Customize toggles</string>
    <string name="header_summary_clock">Clock location, AM/PM style, color</string>
    <string name="header_summary_signal">Signal dBm text</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="title_pref_menu_display">Menu location</string>
    <string name="summary_pref_menu_display">Remember to remove your menu buttons if you\'re using the big menu button!, Reboot Required!</string>
    <string name="navigation_bar">Navigation bar</string>
    <string name="navigation_bar_tint_title">Navigation bar color</string>
    <string name="navigation_bar_glow_tint_title">Navigation bar glow color</string>
    <string name="navigation_bar_glow_tint_summary">When you press on a button, there is a glow. Use this to change the color of the glow.</string>
    <string name="navigation_bar_height_title">Navigation bar height</string>
    <string name="navigation_bar_width_title">Navigation bar width</string>
    <string name="title_pref_navigation_menu_display">Menu visibility</string>
    <string name="summary_pref_navigation_menu_display">How and when do you want the menu buttons to appear?</string>
    <string name="navbar_order_title">Navigation button order</string>
    <string name="navbar_order_summary">Customize the order of your soft keys</string>
    <string name="enabled_navbar_buttons_title">Enabled buttons</string>
    <string name="enabled_navbar_buttons_summary">Choose which soft keys you would like to see</string>
    <string name="button_transparency_title">Nav button transparency</string>
    <string name="long_press_home_title">Long press home action</string>
    <string name="long_press_home_summary">What to do when long pressing the home softkey. Reboot required to reflect changes.</string>
    <string name="glow_times_title">Button glow animation</string>
    <string name="glow_times_summary">Adjust how fast your buttons animate after you touch them. Lowering the speed can improve performance.</string>
    <string name="rotation_animation_delay_title">Rotation delay</string>
    <string name="rotation_animation_delay_summary">The number of milliseconds for which the device posture must be stable before an orientation change occurs. 200 ms default.</string>
	<string name="ime_switcher_title">Show IME Switcher</string>
	<string name="ime_switcher_summary">In statusbar, while typing.</string>
	<string name="custom_carrier_label_title">Custom carrier label</string>
	<string name="longpress_to_kill_title">Hold back to kill</string>
	<string name="longpress_to_kill_summary">Holding back will kill the current activity</string>
	<string name="rotate_180_title">Allow 180° rotation</string>
	<string name="rotate_180_summary">Allow your device to rotate upside down!</string>
	<string name="recent_app_switcher_title">Recents window style</string>
 	<string name="recent_app_switcher_summary">Change the recents window style (requires UI restart)</string>
	<string name="disable_bootanimation_title">Disable boot animation</string>
	<string name="disable_bootanimation_summary">Can you dodge the wrath of Chizzele!</string>
        <string name="disable_bootaudio_title">Disable boot audio</string>
 	<string name="disable_bootaudio_summary">Boot Animation Audio is Turned off!</string>
        <string name="disable_bootaudio_summary_disabled">To enable boot audio, you must have an MP3 file at \n/system/media/boot_audio.mp3</string>
	<string name="disable_bugmailer_title">Disable bugmailer</string>
	<string name="crt_animations_header">CRT animations</string>
	<string name="crt_on_title">CRT on animation</string>
	<string name="crt_off_title">CRT off animation</string>
    <string name="pref_lockscreen_layout_title">Lockscreen style</string>
    <string name="pref_lockscreen_layout_summary">Remember to scroll down and change your targets after changing styles</string>
    <string name="title_pref_lockscreen_quad_targets">Quad Targets</string>
    <string name="summary_pref_lockscreen_quad_targets">Adds Phone and Messaging shortcuts on the lock screen</string>
    <string name="title_pref_lockscreen_octo_targets">Octo Targets</string>
    <string name="summary_pref_lockscreen_octo_targets">Adds 8 shortcuts on the lock screen</string>
    <string name="title_pref_lockscreen_menu_unlock">Menu unlock</string>
    <string name="summary_pref_lockscreen_menu_unlock">Legacy menu icon unlocks screen (requires reboot)</string>
    <string name="title_lockscreen_user_timeout_override">Wait to lock screen</string>
    <string name="summary_lockscreen_user_timeout_override">Use Android\'s timeout setting after you manually turn the screen off. The default behavior is to use the delay only when the screen times out by itself.</string>
    <string name="show_lock_before_unlock_title">Show lockscreen</string>
    <string name="show_lock_before_unlock_summary">Show standard lockscreen before secure unlock</string>
    <string name="lockscreen_battery_title">Lockscreen Battery Percentage</string>
    <string name="lockscreen_battery_summary">Always show battery percentage on the lockscreen</string>
    <string name="volume_wake_title">Volume wake</string>
    <string name="volume_wake_summary">Tapping the volume keys while your phone is off will turn the screen on.</string>
    <string name="volume_music_controls_title">Volume music controls</string>
    <string name="volume_music_controls_summary">Long press volume buttons to skip tracks while screen is off. Volume wake will not work when music is playing.</string>
    <string name="lockscreen_show_nav_title">Hide nav bar</string>
    <string name="lockscreen_show_nav_summary">Hide the nav bar (if your device supports it) on the lockscreen.</string>
    <string name="custom_app_n_dialog_title">Choose action for target %1$s</string>
    <string name="custom_app_n">Custom app %1$s</string>
    <string name="lockscreen_targets">Lockscreen targets</string>
    <string name="lockscreen_action_unlock">Unlock</string>
    <string name="lockscreen_action_sound">Sound toggle</string>
    <string name="lockscreen_action_camera">Camera</string>
    <string name="lockscreen_action_mms">SMS</string>
    <string name="lockscreen_action_phone">Phone</string>
    <string name="lockscreen_action_none">Empty</string>
    <string name="lockscreen_custom_app_icon_no_sd">Insert SD card to use this feature</string>
    <string name="lockscreen_custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="lockscreen_custom_app_icon_failed">"Setting icon failed! Is your SD mounted?"</string>
    <string name="lockscreen_landscape_title">Horizontal lockscreen</string>
    <string name="lockscreen_landscape_summary">Whether horizontal lockscreen orientation will be enabled</string>
    <string name="lockscreen_quick_unlock_control_title">Quick pin unlock</string>
    <string name="lockscreen_quick_unlock_control_summary">Unlock password/pin lockscreen without pressing enter button</string>
    <string name="enable_fast_torch_title">Enable fast torch</string>
    <string name="enable_fast_torch_summary">While your screen is off, you can long-press the power key to turn the LED light on. Letting go of the power button will turn the torch off.</string>
    <string name="lockscreen_wallpaper_title">Choose lockscreen wallpaper</string>
    <string name="lockscreen_wallpaper_summary">You can remove the wallpaper from the menu in this window</string>
    <string name="lockscreen_text_color_title">Lockscreen text color</string>
    <string name="title_show_screenshot">Show screenshot</string>
    <string name="title_show_torch_toggle">Show torch toggle</string>
    <string name="title_show_airplane_toggle">Show airplane toggle</string>
    <string name="title_show_navbar_hide">Show navigation bar toggle</string>
    <string name="title_settings_behavior">Use default settings behavior</string>
    <string name="summary_settings_behavior">Default behavior is to long press for toggles, press for settings. Uncheck to press for toggles, long press for settings</string>
    <string name="title_auto_hide_toggles">Auto hide toggles</string>
    <string name="summary_auto_hide_toggles">After collapse toggles will hide</string>
    <string name="title_status_bar_brightness_toggle">Enable brightness control Must Reboot/Restart.</string>
    <string name="summary_status_bar_brightness_toggle">Slide finger slowly across statusbar to adjust brightness setting</string>
    <string name="icon_transparency_title">Notification icon transparency</string>
    <string name="adb_icon_title">Enable USB debugging icon</string>
    <string name="adb_icon_summary">Wutang</string>
    <string name="statusbar_transparency">Transparency</string>
    <string name="statusbar_transparency_summary">Turning this on might affect performance and battery life. (requires UI restart)</string>
    <string name="statusbar_layout">Notification drawer layout</string>
    <string name="statusbar_layout_summary">Change the notification drawer layout (requires UI restart)</string>
    <string name="battery_icon">Battery icon style</string>
    <string name="battery_summary_text_widget">@null</string>
    <string name="battery_bar">Battery bar location</string>
    <string name="battery_bar_color">Battery bar color</string>
    <string name="battery_bar_cat">Battery bar options</string>
    <string name="battery_bar_style_title">Battery bar style</string>
    <string name="battery_bar_thickness_title">Battery bar thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_animate_summary">The charging animation may result in a poor user experience. Enable at your own discretion.</string>
    <string name="clock_title_enable">Clock style</string>
    <string name="title_clock_ampm_entries">AM/PM style</string>
    <string name="colors">Colors</string>
    <string name="clock_color_title">Clock color</string>
    <string name="reset_color_title">Reset color</string>
    <string name="enable_alarm_title">Enable alarm icon</string>
    <string name="enable_alarm_summary">After disabling/enabling, you must toggle your alarms for it to show up again. Or reboot.</string>
    <string name="enable_clock_weekday">Day of the week</string>
</resources>