<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

 

<header android:title="@string/statusbar" />


	<header
		android:id="@+id/statusbar_battery"
		android:title="@string/battery"
		android:fragment="com.sourcery.icscontrol.fragments.StatusBarBattery"
		android:icon="@drawable/ic_ics_control_battery"
		android:summary="@string/header_summary_battery" />
		
	<header
		android:id="@+id/statusbar_battery"
		android:title="@string/signal"
		android:fragment="com.sourcery.icscontrol.fragments.StatusBarSignal"
		android:icon="@drawable/ic_ics_control_signal"
		android:summary="@string/header_summary_signal" />

	<header
		android:id="@+id/statusbar_clock"
		android:title="@string/clock"
		android:fragment="com.sourcery.icscontrol.fragments.StatusBarClock"
		android:icon="@drawable/ic_ics_control_clock"
		android:summary="@string/header_summary_clock" />

<header android:title="@string/toggles_layout" />

	<header
		android:id="@+id/statusbar_toggles"
		android:fragment="com.sourcery.icscontrol.fragments.StatusBarToggles"
		android:title="@string/toggles_layout"
		android:icon="@drawable/ic_ics_control_toggles"
		android:summary="@string/header_summary_toggles" />

	<header android:title="@string/user_interface" />

         <header
		android:id="@+id/statusbar_general"
		android:fragment="com.sourcery.icscontrol.fragments.StatusBarGeneral"
		android:title="@string/general"
		android:icon="@drawable/ic_ics_control_general"
		android:summary="@string/header_summary_general" />
<header
		android:id="@+id/user_interface"
		android:fragment="com.sourcery.icscontrol.fragments.UserInterface"
		android:title="@string/general_ui"
		android:icon="@drawable/ic_ics_control_general_ui"
		android:summary="@string/header_summary_general_ui" />


      <header android:title="Navigation Bar and Power Settings" />

	

	<header
		android:id="@+id/nav_bar"
		android:fragment="com.sourcery.icscontrol.fragments.Navbar"
		android:title="@string/nav_bar"
		android:icon="@drawable/ic_ics_control_navigation_bar"
		android:summary="@string/header_summary_navigation_bar" />

	
	<header
		android:id="@+id/power_menu"
		android:fragment="com.sourcery.icscontrol.fragments.PowerMenu"
		android:title="@string/power_menu_optons"
		android:icon="@drawable/ic_ics_control_power_menu"
		android:summary="@string/header_summary_power_menu" />

 <header android:title="@string/lockscreen_options" />

<header
		android:id="@+id/lockscreens"
		android:fragment="com.sourcery.icscontrol.fragments.Lockscreens"
		android:title="@string/lockscreen_options"
		android:icon="@drawable/ic_ics_control_lockscreens"
		android:summary="@string/header_summary_lockscreens" />




         <header
		android:id="@+id/functionality"
		android:title="@string/functionality" />

	

	<header
		android:id="@+id/led"
		android:fragment="com.android.settings.notificationlight.NotificationLightSettings" 
		android:title="@string/led_options"
		android:icon="@drawable/ic_ics_control_led"
		android:summary="@string/header_summary_led" />

</preference-headers>

