<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:key="rom_ui"
		android:title="@string/user_interface">

		<Preference
			android:key="menu_pref"
			android:title="@string/general_ui">

			<intent
				android:action="android.intent.action.MAIN"
				android:targetClass="com.sourcery.icscontrol.activities.UserInterface"
				android:targetPackage="com.sourcery.icscontrol" />
		</Preference>

		<Preference
			android:key="nav_bar"
			android:title="@string/nav_bar">

			<intent
				android:action="android.intent.action.MAIN"
				android:targetClass="com.sourcery.icscontrol.activities.Navbar"
				android:targetPackage="com.sourcery.icscontrol" />
		</Preference>

		<Preference
			android:key="lockscreen_pref"
			android:title="@string/lockscreen_options">

			<intent
				android:action="android.intent.action.MAIN"
				android:targetClass="com.sourcery.icscontrol.activities.Lockscreens"
				android:targetPackage="com.sourcery.icscontrol" />
		</Preference>

		<Preference
			android:key="powermenu"
			android:title="@string/power_menu_optons">

			<intent
				android:action="android.intent.action.MAIN"
				android:targetClass="com.sourcery.icscontrol.activities.PowerMenu"
				android:targetPackage="com.sourcery.icscontrol" />
		</Preference>
	</PreferenceCategory>

	<PreferenceCategory
		android:key="functionality"
		android:title="@string/functionality">

		

		<Preference
			android:key="led_prefs"
			android:title="@string/led_options">

			<intent
				android:action="android.intent.action.MAIN"
				android:targetClass="com.sourcery.icscontrol.activities.LED"
				android:targetPackage="com.sourcery.icscontrol" />
		</Preference>


	</PreferenceCategory>

	<PreferenceCategory
		android:key="statusbar"
		android:title="@string/statusbar">

		<Preference
			android:key="general_pref"
			android:title="@string/general">

			<intent
				android:action="android.intent.action.MAIN"
				android:targetClass="com.sourcery.icscontrol.activities.StatusBarGeneral"
				android:targetPackage="com.sourcery.icscontrol" />
		</Preference>

		<Preference
			android:key="toggles"
			android:title="@string/toggles_layout">

			<intent
				android:action="android.intent.action.MAIN"
				android:targetClass="com.sourcery.icscontrol.activities.StatusBarToggles"
				android:targetPackage="com.sourcery.icscontrol" />
		</Preference>

		<Preference
			android:key="clock"
			android:title="@string/clock">

			<intent
				android:action="android.intent.action.MAIN"
				android:targetClass="com.sourcery.icscontrol.activities.StatusBarClock"
				android:targetPackage="com.sourcery.icscontrol" />
		</Preference>

		<Preference
			android:key="battery"
			android:title="@string/battery">

			<intent
				android:action="android.intent.action.MAIN"
				android:targetClass="com.sourcery.icscontrol.activities.StatusBarBattery"
				android:targetPackage="com.sourcery.icscontrol" />
		</Preference>

	</PreferenceCategory>

	

</PreferenceScreen>
